--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
   }
 }
