--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "next": "13.4.19",
+    "openai": "^4.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
