--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^5.3.0",
+    "@visx/group": "^3.3.0",
+    "@visx/scale": "^3.3.0",
+    "@visx/xychart": "^3.3.0",
     "next": "13.4.19",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
