--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    
     "@blueprintjs/core": "^5.3.0",
     "@visx/group": "^3.3.0",
     "@visx/scale": "^3.3.0",
@@ -17,10 +16,10 @@
     "next": "13.4.19",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
     "dotenv": "^16.3.1",
     "next": "13.4.19",
-    "openai": "^4.6.0",
+    "openai": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "20.6.0",
