--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^5.3.0",
+    "@react-spring/web": "^9.7.3",
+    "@visx/gradient": "^3.3.0",
     "@visx/group": "^3.3.0",
     "@visx/scale": "^3.3.0",
     "@visx/xychart": "^3.3.0",
-    "next": "13.4.19",
-    "prettier": "^3.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "dotenv": "^16.3.1",
     "next": "13.4.19",
-    "openai": "^4.6.0"
+    "openai": "^4.6.0",
+    "prettier": "^3.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.6.0",
