--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@visx/shape": "^3.3.0",
     "@visx/tooltip": "^3.3.0",
     "@visx/xychart": "^3.3.0",
+    "axios": "^1.5.0",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
+    "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
     "next": "13.4.19",
     "openai": "^4.6.0",
