--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-yaml": "^4.1.0",
     "next": "13.4.19",
     "openai": "^4.6.0",
+    "papaparse": "^5.4.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
     "@types/node": "20.6.0",
+    "@types/papaparse": "^5.3.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
